added new project

--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,11 @@
     <div class="col-sm-8">
 <center><h1>Newest Projects.<h1></center>
   <hr>
+
+<p>
+  <a href="https://devbydarren.github.io/index.html" >To-Do List with Points Tracking</a>
+</p>
+
 <p>
   <a href="/given-2-numbers.html" >Adding and Subtracting 2 Different Numbers</a>
 </p>
