--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
   <hr>
 
 <p>
-  <a href="https://devbydarren.github.io/index.html" >To-Do List with Points Tracking</a>
+  <a href="https://devbydarren.github.io/my-quest" >To-Do List with Points Tracking</a>
 </p>
 
 <p>
