fixed broken url link

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
   <a href="/given-2-numbers.html" >Adding and Subtracting 2 Different Numbers</a>
 </p>
 <p>
-  <a href="/project-euler-challenge-1" >Sum of Multiples of 3 and 5</a>
+  <a href="/project-euler-challenge-1.html" >Sum of Multiples of 3 and 5</a>
 </p>
     </div>
     <div class="col-sm-2"></div>
